Update the project